gcc/testsuite/rust/rustc/ui/error-codes/E0430.rs
use std::fmt::{self, self}; // { dg-error ".E0252." "" { target *-*-* } }
// { dg-error ".E0252." "" { target *-*-* } .-1 }

fn main () {
}

